<resources>
    <string name="app_name">MCA-ResourceBook</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="TandC">I agree to the terms and condition of the AppCompany</string>
    <string name="error_view">Error View</string>
    <string name="password">Password</string>
    <string name="email_hint">user@domain.com</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_verify_again">Send Verify Email Again</string>
    <string name="enterEmailId">Enter the registered Email ID</string>
    <string name="reset_password">Reset Password</string>
    <string name="user_domain_com">user@domain.com</string>
    <string name="settings_name">Account Settings</string>
    <string name="hint_email">Email</string>
    <string name="btn_change">Change</string>
    <string name="new_pass">New Password</string>
    <string name="hint_password">Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="hint_name">Fullname</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="logout">logout</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">log out</string>
    <string-array name="Spinner_item">
        <item>Seminar Hall</item>
        <item>Classrooms</item>
        <item>Labs</item>
    </string-array>

</resources>
